// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcSmartTableHeading > should not render the title if title prop was not given 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`EcSmartTableHeading > should render given filter and header-actions slots 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
  <div
    class="ec-smart-table-heading"
  >
    <div
      class="ec-smart-table-heading__filter"
    >
      
      <div>
        Custom filter
      </div>
      
    </div>
    <div
      class="ec-smart-table-heading__actions"
    >
      
      <div>
        Header Actions
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`EcSmartTableHeading > should render given filter slot 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
  <div
    class="ec-smart-table-heading"
  >
    <div
      class="ec-smart-table-heading__filter"
    >
      
      <div>
        Custom filter
      </div>
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`EcSmartTableHeading > should render given header-actions slot 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
  <div
    class="ec-smart-table-heading"
  >
    <!--v-if-->
    <div
      class="ec-smart-table-heading__actions"
    >
      
      <div>
        Header Actions
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`EcSmartTableHeading > should render properly 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
  <!--v-if-->
  
</div>
`;
